# ptui

./: ptui.cabal  stack.yaml
app/: Main.hs
src/: Args.hs  Events.hs  Lib.hs  Main.hs  Ptui.hs  Settings.hs
src/Pt/: Commands.hs  Ioctl.hsc  Pt.hs  Spawn.hs
src/Ptui/: Args.hs  ColorCache.hs  Config.hs  Events.hs  Pt.hs  Ptui.hs  Settings.hs  State.hs  StateMachine.hs  Types.hs  Vt.hs  Xft.hsc  Xutils.hs
src/Ui/: ColorCache.hs  Commands.hs  Ui.hs  Xft.hsc  Xutils.hs
src/exe/: Main.hs
src/lib/Pt/: Ioctl.hsc  Pt.hs  StateMachine.hs  Vt.hs
src/lib/Ptui/: Args.hs  Config.hs  Ptui.hs  State.hs  Types.hs
src/lib/Ui/: ColorCache.hs  Xutils.hs
test/: Spec.hs
test/Pt/: StateMachineTest.hs
