name:                ptui
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/mrak/ptui#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ptui
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Ptui.Ptui
                     , Ptui.Args
                     , Ptui.Config
                     , Ptui.Types
                     , Ui.ColorCache
                     , Ui.Xutils
                     , Ui.Xft
                     , Ui.Commands
                     , Pt.Ioctl
                     , Pt.Spawn
                     , Pt.Commands
                     , Pt.StateMachine
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative >= 0.12.1.0
                     , xdg-basedir
                     , ini
                     , text
                     , stm
                     , mtl
                     , transformers
                     , array
                     , directory
                     , X11
                     , X11-xft
                     , containers
                     , utf8-string
                     , unix
                     , bytestring
                     , lens-simple
  default-language:    Haskell2010
  extra-libraries:   Xrandr Xrender

test-suite ptui-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ptui
                     , HUnit
                     , bytestring
  other-modules:       Pt.StateMachineTest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mrak/ptui
